<resources>
    <string name="eula_title">Note It!</string>
    <string name="eula_accept">I Accept</string>
    <string name="eula_refuse">Decline</string>
    <string name="eula_terms_of_use">EULA</string>
    <string name="eula_agree">You need to Read and Accept the \"EULA\" before you can continue.</string>
    <string name="app_critical_error">A critical error occurred. Try reinstalling the application.</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="Skip">Skip Price</string>
    <string name="hello"> </string>
    <string name="app_name">Note It!</string>
	<string name="app_home">Dashboard</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="dashboard_signout">Log Out</string>
    <string name="category_uncategorized">Uncategorized</string>
    <string name="server_error">There was an error communicating with the server. Please try later.</string>
    <string name="register">Sign Up</string>
    <string name="register_first_name">First Name</string>
    <string name="register_last_name">Last Name</string>
    <string name="register_confirm_password">Confirm Password</string>
    <string name="register_blank_password">Password cannot be empty.</string>
    <string name="register_blank_email">Please provide a valid email address.</string>
    <string name="register_registering">Signing Up &#8230;</string>
    <string name="register_termsandconditions">By clicking on \"Sign Up\", you are accepting the End User License Agreement (EULA). Please click on \"EULA\" to read and accept the EULA.</string>
    <string name="register_first_name_hint">John</string>
    <string name="register_last_name_hint">Doe</string>
    <string name="register_error_title">Sign Up Failed</string>
    <string name="password_hint">Required</string>
    <string name="login_activity_title">Please Log In</string>
    <string name="login_login">Log In</string>
	<string name="login_email">Email</string>
	<string name="login_emailhint">Required</string>
    <string name="login_password">Password</string>
    <string name="Login_Authenticating_message">Authenticating &#8230;</string>
    <string name="login_success">Log In Successful</string>
    <string name="login_failed">Log In Failed</string>
    <string name="login_password_tooshort">Password must be at least six characters in length.</string>
    <string name="login_forgot_password">Forgot Password?</string>
    <string name="login_forgot_password_title">Enter email:</string>
    <string name="login_forgot_password_success">A password reset link has been sent to \'%1$s\'. Please use the link within the next 24 hours to reset your password.</string>
    <string name="categorylist_title">Categories</string>
    <string name="categorylists_add">Add Category</string>
    <string name="categorylists_edit">Edit Category</string>
	<string name="progress_message">Please wait &#8230;</string>
	<string name="shoplistsactivity_title">Shopping Lists</string>
	<string name="empty_shoppinglists">You do not have any shopping lists. Please add a list by clicking the \"Add\" button.</string>
  	<string name="add_shoplist">Add</string>
  	<string name="shopping_list_confirm_delte">Are you sure you want to delete this list? All items in the list will also be deleted.</string>
    <string name="noteit_prefs">Settings</string>
	<string name="shoppinglist_add_title">List Name</string>
	<string name="shoppinglist_edit_title">Edit List</string>
	<string name="shoppinglist_name_blank">The name of the Shopping List cannot be left blank.</string>
	<string name="menu_shoplist_delete">Delete</string>
	<string name="menu_shoplist_edit">Edit</string>
	<string name="categoriesactivity_title">Categories</string>
	<string name="categoriesactivity_empty_list">You have not added any Categories. You can add new Categories by clicking the Add button.</string>
	<string name="categories_drag">Hand</string>
	<string name="itemlistactivity_title">Items To Shop</string>
	<string name="empty_shoppingitems">You do not have any items in this list. You can add new items by clicking the Add button.</string>
	<string name="itemlist_select_shoppinglist">Choose Shopping List</string>
	<string name="itemlist_unitpriceformat">\@ %1$s/%2$s</string>
	<string name="itemlist_total">Total: %1$s</string>
	<string name="itemlist_remaining">Remaining: %1$s</string>
	<string name="itemlist_expandall">Expand All</string>
	<string name="itemlist_collapseall">Collapse All</string>
	<string name="itemlist_email">Share List</string>
	<string name="itemlist_emailPrompt">Share List Via</string>
	<string name="itemlist_alldone">All Done</string>
	<string name="itemlist_emailIntro">The sender shared a Shopping List with you:</string>
	<string name="itemlist_emailsig">Sent from Note It! | www.noteitweb.com</string>
	<string name="itemlist_movetolist">Move to Shopping List</string>
	<string name="itemlist_copytolist">Copy to Shopping List</string>
	<string name="itemlist_copytolistsuccess">Item Copied</string>
	<string name="itemlist_previous">Previous</string>
	<string name="itemlist_next">Next</string>
	<string name="itemlist_loadmorebutton">Load %1$d More Items &#8230;</string>
	<string name="itemlist_loadingmore">Loading More Items &#8230;</string>
	<string name="itemlist_scanbarcode">Scan</string>
	<string name="itemlist_itemnotfound">Details about the Item are not available. Would you like to enter details which will be remembered subsequently?</string>
	<string name="itemlist_Price_Up">&#x2191;</string>
	<string name="itemlist_Price_Down">&#x2193;</string>
	<string name="itemlistqe_edit">Edit</string>
	<string name="itemlistqe_delete">Delete</string>
	<string name="itemlistqe_bought">Done</string>
	<string name="itemlistqe_copy">Copy</string>
	<string name="itemlistqe_move">Move</string>
	<string name="itemlistqe_like">Like</string>
	<string name="itemlistqe_dislike">Dislike</string>
	<string name="addedit_Title">Add Item</string>
	<string name="addedit_EditTitle">Edit Item</string>
	<string name="addedit_Name">Name:</string>
	<string name="addedit_Name_Hint">Item Name</string>
	<string name="addedit_quantity">Quantity:</string>
	<string name="addedit_quantityHint">Quantity</string>
	<string name="addedit_unit">Unit:</string>
	<string name="addedit_price">Unit Price:</string>
	<string name="addedit_priceHint">Unit Price</string>
	<string name="addedit_category">Category:</string>
	<string name="addedit_Done">Done</string>
	<string name="addedit_Continue">Add More</string>
	<string name="addedit_nameblank">The item name cannot be blank</string>
	<string name="addedit_itemupdated">The item details have been updated</string>
	<string name="addedit_askLater">Ask Later</string>
	<string name="addedit_askLaterPrompt">How much did %1$.2f %2$s of %3$s cost?</string>
	<string name="addedit_asklaterhelp">"If you do not know the price of the item, please select \"Ask Later\". You will be prompted for price when you mark the item \"Done\"."</string>
	<string name="addedit_total">Total: %1$.2f</string>
	<string name="addedit_asklater_price">Total Price</string>
	<string name="addedit_increment">+</string>
	<string name="addedit_decrement">-</string>
	<string name="reporting_title">Reports</string>
	<string name="reporting_purchased_group">Expense Reports</string>
	<string name="reporting_pending_group">Pending Item Reports</string>
	<string name="reporting_putchased_today">Today</string>
	<string name="reporting_purchased_today_desc">Display a Report of all Items Purchased Today</string>
	<string name="reporting_putchased_yesterday">Yesterday</string>
	<string name="reporting_purchased_yesterday_desc">Display a Report of all Items Purchased Yesterday</string>
	<string name="reporting_purchased_thisweek">This Week</string>
	<string name="reporting_purchased_thisweek_desc">Display a Report of all Items Purchased This Week</string>
	<string name="reporting_purchased_lastweek">Last Week</string>
	<string name="reporting_purchased_lastweek_desc">Report of all Items Purchased Last Week</string>
	<string name="reporting_purchased_thisMonth">This Month</string>
	<string name="reporting_purchased_thisMonth_desc">Display a Report of Items Purchased This Month by Category</string>
	<string name="reporting_purchased_lastMonth">Last Month</string>
	<string name="reporting_purchased_lastMonth_desc">Display a Report of Items Purchased Last Month by Category</string>
	<string name="reporting_purchased_All">So far</string>
	<string name="reporting_pending_all_menu">All</string>
	<string name="reporting_pending_all_desc">Display a Report of all Pending Items.</string>
	<string name="reporting_pending_all_title">All Items Pending</string>
	<string name="reporting_item_name">Item Name</string>
	<string name="reporting_category_category">Category</string>
	<string name="reporting_category_price">Price</string>
	<string name="reporting_category_percentage">Percentage</string>
	<string name="reporting_emailIntro">The sender shared a Shopping Report with you:</string>
	<string name="reporting_sharemessage">Share Report Via</string>
	<string name="sharewithuser_title">Email of NoteIt! user&#8230;</string>
	<string name="sharewith_title">Share with?</string>
	<string name="sharewith_succeded">Your list is now shared with user %1$s. A message has been sent to the user.</string>
	<string name="reporting_category_head_dark">
	    <![CDATA[
	    	<html>
	    	<head>
	    	<style type=\"text/css\">
				table {padding-top:5px; padding-bottom:5px; padding-left:10px; padding-right: 10px; color: #808080;}
				tr.top-border {border-top: thin solid #808080;}
				tr.border-bottom {border-bottom: thin solid #808080;}
				th {
					font-weight: bold; 
					padding-bottom:10px;
					border-bottom: thin solid #808080; 	
				}
				th.la {text-align: left;}
				th.ra {text-align: right;}
				th.ca {text-align: center;}
				td.la {text-align: left;}
				td.ra {text-align: right;}
				td.ca {text-align: center;}
				td#footer {border-top: thin solid #808080; padding-top: 10px}
	    	</style>
	    	</head>
	    	<body>
	    	<table width=\'100%\'>
	    ]]>
	</string>
	<string name="reporting_category_report_item_dark">
	    <![CDATA[
	    	<tr>
	    		<td class=\"la\">%1$s</td>
	    		<td class=\"ra\">%2$s</td>
	    		<td class=\"ra\">%3$s %%</td>
	    	</tr>
	    	]]>
	</string>
	<string name="reporting_category_footer_dark">
	    <![CDATA[
	    	<tr>
	    		<td id=\"footer\" class=\"la\">Total:</td>
	    		<td id=\"footer\" class=\"ra\">%1$s</td>
	    		<td id=\"footer\" class=\"ra\">100 %%</td>
	    	</tr>
	    	</table>
	    	</body>
	    	</html>
	    	]]>
	</string>
	<string name="reporting_category_head_trademark">
	    <![CDATA[
	    	<html>
	    	<head>
	    	<style type=\"text/css\">
				table {padding-top:5px; padding-bottom:5px; padding-left:10px; padding-right: 10px; color: #433a26;}
				tr.top-border {border-top: thin solid #808080;}
				tr.border-bottom {border-bottom: thin solid #808080;}
				th {
					font-weight: bold; 
					padding-bottom:10px;
					border-bottom: thin solid #808080; 	
				}
				th.la {text-align: left;}
				th.ra {text-align: right;}
				th.ca {text-align: center;}
				td.la {text-align: left;}
				td.ra {text-align: right;}
				td.ca {text-align: center;}
				td#footer {border-top: thin solid #808080; padding-top: 10px}
	    	</style>
	    	</head>
	    	<body>
	    	<table width=\'100%\'>
	    ]]>
	</string>
	<string name="reporting_category_report_item_trademark">
	    <![CDATA[
	    	<tr>
	    		<td class=\"la\">%1$s</td>
	    		<td class=\"ra\">%2$s</td>
	    		<td class=\"ra\">%3$s %%</td>
	    	</tr>
	    	]]>
	</string>
	<string name="reporting_category_footer_trademark">
	    <![CDATA[
	    	<tr>
	    		<td id=\"footer\" class=\"la\">Total:</td>
	    		<td id=\"footer\" class=\"ra\">%1$s</td>
	    		<td id=\"footer\" class=\"ra\">100 %%</td>
	    	</tr>
	    	</table>
	    	</body>
	    	</html>
	    	]]>
	</string>
</resources>