<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

   <item android:id="@+id/itemlist_home"
       android:icon="@drawable/home"
       android:title="@string/app_home" />

   <item android:id="@+id/itemlist_add"
		android:icon="@drawable/add"    		
        android:title="@string/add_shoplist" />

   <item android:id="@+id/itemlist_scan"
       android:icon="@drawable/barcode" 
       	android:title="@string/itemlist_scanbarcode" />
   
   <item android:id="@+id/itemlist_email"
		android:icon="@drawable/share" 		
        android:title="@string/itemlist_email" />

   <item android:id="@+id/itemlist_alldone"
		android:icon="@drawable/tick" 		
        android:title="@string/itemlist_alldone" />

   <item android:id="@+id/itemlist_settings"
		android:icon="@drawable/settings"    		
        android:title="@string/noteit_prefs" />
        
   <item android:id="@+id/itemlist_logout"
		android:icon="@drawable/sign_out"    		
        android:title="@string/dashboard_signout" />
   
</menu>