<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/register_root"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/application_background_trademark">
    
    <com.geekjamboree.noteit.TitleBar
        android:id="@+id/register_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    
   	<ScrollView
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical">

	    <LinearLayout 
	        android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:padding="8dip"
		    android:orientation="vertical">
		    
			<TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		    	android:paddingBottom="8dip"
		        android:text="@string/register_first_name"
		        style="@style/TextAppearance.TradeMarkDark" />
		
		    <EditText
		        android:id="@+id/editFirstName"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		    	android:paddingBottom="8dip"
		        android:selectAllOnFocus="true"
		        android:inputType="text"
		        android:hint="@string/register_first_name_hint" >
		        <requestFocus />
		    </EditText>
		
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		    	android:paddingBottom="8dip"
		        android:text="@string/register_last_name"
		        style="@style/TextAppearance.TradeMarkDark" />
		
		    <EditText
		        android:id="@+id/editLastName"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		    	android:paddingBottom="8dip"
		        android:selectAllOnFocus="true"
		        android:inputType="text"
		        android:hint="@string/register_last_name_hint" />
		
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		    	android:paddingBottom="8dip"
		        android:text="@string/login_email"
		        style="@style/TextAppearance.TradeMarkDark" />
		
		    <EditText
		        android:id="@+id/editEmail"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		    	android:paddingBottom="8dip"
		        android:selectAllOnFocus="true"
		        android:inputType="textEmailAddress"
		        android:hint="@string/login_emailhint" />
		    
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		    	android:paddingBottom="8dip"
		        android:text="@string/login_password"
		        style="@style/TextAppearance.TradeMarkDark" />
		
		    <EditText
		        android:id="@+id/editPassword"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		    	android:paddingBottom="8dip"
		        android:selectAllOnFocus="true"
		        android:inputType="textPassword"
		        android:hint="@string/password_hint" />
		    
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		    	android:paddingBottom="8dip"
		        android:text="@string/register_confirm_password"
		        style="@style/TextAppearance.TradeMarkDark" />
		
		    <EditText
		        android:id="@+id/editConfirmPassword"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		    	android:paddingBottom="8dip"
		        android:selectAllOnFocus="true"
		        android:inputType="textPassword"
		        android:hint="@string/password_hint" />
		
		    <TextView 
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		    	android:paddingBottom="8dip"
		        android:text="@string/register_termsandconditions"
		        style="@style/TextAppearance.TradeMarkDark.Small" />
		    
		    <Button
		        android:id="@+id/buttonEula"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="right"
		    	android:paddingBottom="8dip"
		        android:text="@string/eula_terms_of_use"/>
		    
		    <Button
		        android:id="@+id/buttonRegister"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="right"
		    	android:paddingBottom="8dip"
		        android:text="@string/register" />

		</LinearLayout>	    
        
	</ScrollView>
		
    <LinearLayout 
        android:id="@+id/login_progress"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
    	android:paddingTop="8dip"
    	android:paddingBottom="8dip"
		android:layout_gravity="bottom"
		android:gravity="bottom"
		android:orientation="horizontal" >

        <ProgressBar
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:text="@string/register_registering"
            android:textAppearance="@style/TextAppearance.TradeMarkDark.Small" />

    </LinearLayout>
    
</LinearLayout>